src/test/deca/context/valid/op_arith_float.deca
// Description :
// test d'opérations binaires sur des flottants
//
// Résultats :
// ok

{
  float x;
  x = 1.0 / 1.0;
  x = 1.0 - 1.0;
  x = 1.0 * 1.0;
  x = 1.0 + 1.0;
}
